--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
 
 <body>
 <div id="site-loader">
-  <div class="loader-inner">
-    <div class="lux-title" id="luxTitle">ANANTA STREET</div>
-    <div class="lux-sweep"></div>
+  <div class="orbit-wrap">
+    <div class="orbit">
+      <span></span><span></span><span></span>
+    </div>
+    <div class="orbit-text">ANANTA<br><span>STREET</span></div>
   </div>
 </div>
 <!-- ================= INTRO SECTION ================= -->
