--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 </div>
 <!-- ================= INTRO SECTION ================= -->
-<section class="scroll-video" 
+<section class="scroll-video intro -reveal" 
   data-video="video/New1.mp4" 
   data-duration="8" 
   data-fps="30" 
@@ -297,5 +297,10 @@
 </footer>
  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
+  <div class="curtain-wrap" id="curtain">
+  <div class="curtain left"></div>
+  <div class="curtain right"></div>
+</div>
+  
 </body>
 </html>
