--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-<div id="site-loader">
+  <div id="site-loader">
   <div class="orbit-wrap">
     <div class="orbit">
       <span></span><span></span><span></span>
@@ -20,13 +20,14 @@
     <div class="orbit-text">ANANTA<br><span>STREET</span></div>
   </div>
 </div>
+
 <!-- ================= INTRO SECTION ================= -->
-<section class="scroll-video intro -reveal" 
+<section class="scroll-video" 
   data-video="video/New1.mp4" 
   data-duration="8" 
   data-fps="30" 
   data-sample="4" 
-  data-autoplay="4">
+  data-autoplay="5">
 
   <div class="sticky-wrap">
     <canvas></canvas>
@@ -297,7 +298,7 @@
 </footer>
  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
-  <div class="curtain-wrap" id="curtain">
+   <div class="curtain-wrap" id="curtain">
   <div class="curtain left"></div>
   <div class="curtain right"></div>
 </div>
