--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
   </div>
 
   <div class="scroll-spacer"></div>
-<video class="playback" muted playsinline preload="metadata"></video>
+<video
+  muted
+  playsinline
+  webkit-playsinline
+  preload="auto"
+></video>
 
-  <video class="extractor" style="display:none;" muted playsinline preload="metadata"></video>
 </section>
 
 <!-- ================= RIGHT TEXT SECTION ================= -->
