--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>AGI Majestic | Luxury Beyond Horizon</title>
+  <title>Ananta Street</title>
 <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
@@ -44,13 +44,9 @@
   </div>
 
   <div class="scroll-spacer"></div>
-<video
-  muted
-  playsinline
-  webkit-playsinline
-  preload="auto"
-></video>
+<video class="playback" muted playsinline preload="metadata"></video>
 
+  <video class="extractor" style="display:none;" muted playsinline preload="metadata"></video>
 </section>
 
 <!-- ================= RIGHT TEXT SECTION ================= -->
