--- a/index.html
+++ b/index.html
@@ -44,9 +44,12 @@
   </div>
 
   <div class="scroll-spacer"></div>
-<video class="playback" muted playsinline preload="metadata"></video>
+<!-- For intro section -->
+<video class="playback" muted playsinline preload="auto" webkit-playsinline="true"></video>
+<video class="extractor" style="display:none;" muted playsinline preload="auto" webkit-playsinline="true"></video>
 
-  <video class="extractor" style="display:none;" muted playsinline preload="metadata"></video>
+<!-- For other sections -->
+<video muted playsinline preload="auto" webkit-playsinline="true"></video>
 </section>
 
 <!-- ================= RIGHT TEXT SECTION ================= -->
@@ -79,7 +82,12 @@
   </div>
 
   <div class="scroll-spacer"></div>
-  <video muted playsinline preload="metadata"></video>
+ <!-- For intro section -->
+<video class="playback" muted playsinline preload="auto" webkit-playsinline="true"></video>
+<video class="extractor" style="display:none;" muted playsinline preload="auto" webkit-playsinline="true"></video>
+
+<!-- For other sections -->
+<video muted playsinline preload="auto" webkit-playsinline="true"></video>
 </section>
 
 <!-- ================= LEFT TEXT SECTION ================= -->
@@ -110,7 +118,12 @@
   </div>
 
   <div class="scroll-spacer"></div>
-  <video muted playsinline preload="metadata"></video>
+ <!-- For intro section -->
+<video class="playback" muted playsinline preload="auto" webkit-playsinline="true"></video>
+<video class="extractor" style="display:none;" muted playsinline preload="auto" webkit-playsinline="true"></video>
+
+<!-- For other sections -->
+<video muted playsinline preload="auto" webkit-playsinline="true"></video>
 </section>
 
 <!-- ================= EMPTY / NEXT SECTION ================= -->
@@ -141,7 +154,12 @@
   </div>
 
   <div class="scroll-spacer"></div>
-  <video muted playsinline preload="metadata"></video>
+<!-- For intro section -->
+<video class="playback" muted playsinline preload="auto" webkit-playsinline="true"></video>
+<video class="extractor" style="display:none;" muted playsinline preload="auto" webkit-playsinline="true"></video>
+
+<!-- For other sections -->
+<video muted playsinline preload="auto" webkit-playsinline="true"></video>
 </section>
 
 
@@ -177,7 +195,12 @@
   </div>
 
   <div class="scroll-spacer"></div>
-  <video muted playsinline preload="metadata"></video>
+<!-- For intro section -->
+<video class="playback" muted playsinline preload="auto" webkit-playsinline="true"></video>
+<video class="extractor" style="display:none;" muted playsinline preload="auto" webkit-playsinline="true"></video>
+
+<!-- For other sections -->
+<video muted playsinline preload="auto" webkit-playsinline="true"></video>
 </section>
 <section class="amenities-section">
   <div class="container">
